# bitcoin-toolbox

./: .gitignore  CMakeLists.txt  README.md  bash_test.sh  bash_test2.sh
src/: hex_conversion.cpp  hex_conversion.hpp  script.cpp  script.hpp  transaction.cpp  transaction.hpp  translation_func_null.cpp
tests/: john_pubkey.txt  key_test.cpp  script_test.cpp  test2.cpp
utils/: add_preimage_to_signed_tx.cpp  calc_redeem_script.cpp  calc_script_address.cpp  calc_timeout.cpp  hash_160.cpp  hash_256.cpp  hash_ascii.cpp  john_pk_to_sha256.cpp  pubkey_hash.cpp
